--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ yarn-error.log*
 
 # Project specific
 coverage
-dist
+# dist # WPY - commented to allow our project to just use dist files built by yarn
 test/unit/coverage
 package-lock.json
 dev/dist
