--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test": "tests"
     },
     "files": [
-        "dist"
+        "dist",
+        "src/locales"
     ],
     "main": "./dist/vue-select.umd.js",
     "module": "./dist/vue-select.es.js",
@@ -22,7 +23,8 @@
             "import": "./dist/vue-select.css",
             "require": "./dist/vue-select.css",
             "style": "./dist/vue-select.css"
-        }
+        },
+        "./src/locales/*": "./src/locales/*"
     },
     "private": false,
     "license": "MIT",
